--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"remotion": "^4.0.0",
+		"svg-path-properties": "^1.2.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
